# url-shortener

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  locustfile.py  pyproject.toml
src/: .env.sample  alembic.ini
src/apps/: __init__.py
src/apps/shortener/: apis.py  controllers.py  enums.py  models.py  schemas.py
src/core/: config.py  events.py  main.py  router.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: b47b34e94f98_.py
src/services/: db.py  redis.py
src/utils/: common_models.py  responses.py
